@@ -4,6 +4,7 @@ import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView;
 import javafx.animation.FadeTransition;
 import javafx.animation.Interpolator;
 import javafx.animation.TranslateTransition;
+import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
@@ -11,6 +12,8 @@ import javafx.scene.control.Button;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.text.Text;
 import javafx.util.Duration;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import seng202.team1.gui.FXWrapper;
 import seng202.team1.models.User;
 import seng202.team1.models.Wine;
@@ -49,26 +52,29 @@ public class WineCategoryDisplayController {
     private AnchorPane mainWine6;
     @FXML
     private Button seeMoreButton;
-
-
+    @FXML
     private List<AnchorPane> wineViews;
+
     private int firstWine = 0;
     private int MAXWINES = 11;
     private int leftDisplay = 7;
     private int rightDisplay;
-    private final double TRANSDURATION = 0.2;
-    private int DISTANCEBETWEEN = 210;
+    private final double TRANSITIONDURATION = 0.2;
+    private final int DISTANCEBETWEEN = 210;
 
     private boolean isWishlist = false;
-    private boolean isRecommenations = false;
+    private boolean isRecommendations = false;
 
-    private ArrayList<Parent> wineDisplays = new ArrayList<>();
-    private ArrayList<Wine> DISPLAYWINES;
+    private final ArrayList<Parent> wineDisplays = new ArrayList<>();
+    private ArrayList<Wine> displayWines;
 
     private static ArrayList<Wine> savedWineList;
     private static String savedSearchString;
 
     private String tags;
+
+    private static final Logger LOG = LogManager.getLogger(WineCategoryDisplayController.class);
+    private static final NavigationController navigationController = new NavigationController();
 
     /**
      * Only initialises on login.
@@ -80,69 +86,97 @@ public class WineCategoryDisplayController {
         wineViews = List.of(mainWine0, mainWine1, mainWine2, mainWine3, mainWine4, mainWine5, mainWine6);
 
         onRefresh();
-        DISPLAYWINES = savedWineList;
+        displayWines = savedWineList;
         tags = savedSearchString;
 
         isWishlist = tags.equalsIgnoreCase("wishlist");
-        isRecommenations = tags.equalsIgnoreCase("recommend");
+        isRecommendations = tags.equalsIgnoreCase("recommend");
 
+        setTitleText();
+        handleEmptyDisplayWines();
+        handleDisplayWines();
+    }
+
+    /**
+     * Sets the title text of the category display depending on the search parameters and special conditions.
+     */
+    private void setTitleText() {
         if (isWishlist) {
             titleText.setText("Your Wishlist: ");
-        } else if (isRecommenations) {
+        } else if (isRecommendations) {
             titleText.setText("Recommendations for you: ");
-            if (DISPLAYWINES.size() < 10) {
+            if (displayWines.size() < 10) {
                 seeMoreButton.setDisable(true);
                 seeMoreButton.setVisible(false);
             }
         } else {
-            titleText.setText(WineCategoryService.getInstance().getCategoryTitles().get(WineCategoryService.getInstance().getCurrentCategory()));
+            titleText.setText(WineCategoryService.getInstance().getCurrentCategoryTitle());
         }
-        if (DISPLAYWINES.isEmpty()) {
+    }
+
+    /**
+     * Handles the case where there are no wines to display and displays the correct message depending on the category type.
+     */
+    private void handleEmptyDisplayWines() {
+        if (displayWines.isEmpty()) {
             if (isWishlist) {
                 titleText.setText("Your Wishlist: \n\nYou have no saved wines...\nGo to home or search pages to discover new wines!");
-            } else if (isRecommenations) {
+            } else if (isRecommendations) {
                 titleText.setText("Recommendations for you: \n\nThere are currently no recommendations for you...");
             } else {
-                titleText.setText(WineCategoryService.getInstance().getCategoryTitles().get(WineCategoryService.getInstance().getCurrentCategory()) +
-                        "\n\nThere was an issue fetching wines. \nPlease try restarting the app!");
+                titleText.setText(WineCategoryService.getInstance().getCurrentCategoryTitle()
+                        + "\n\nThere was an issue fetching wines. \nPlease try restarting the app!");
             }
             leftArrowButton.setDisable(true);
             leftArrowButton.setVisible(false);
             rightArrowButton.setDisable(true);
             rightArrowButton.setVisible(false);
-        } else if (DISPLAYWINES.size() <= 5) {
-            fiveOrLess();
-        } else {
-            if (DISPLAYWINES.size() == 6) {
-                for (int i = 0; i < 6; i++) {
-                    DISPLAYWINES.addLast(DISPLAYWINES.get(i));
-                }
-            }
-            if (DISPLAYWINES.size() == 7) {
-                leftDisplay = 0;
-            }
-            if (DISPLAYWINES.size() < MAXWINES) {
-                MAXWINES = DISPLAYWINES.size();
-                rightDisplay = MAXWINES - 1;
+        }
+    }
+
+    /**
+     * Handles the display of wines in the category depending on the number of wines.
+     */
+    private void handleDisplayWines() {
+        if (!displayWines.isEmpty()) {
+            if (displayWines.size() <= 5) {
+                fiveOrLess();
             } else {
-                rightDisplay = 6;
-            }
-            for (int i = 0; i < MAXWINES; i++) {
-                SearchWineService.getInstance().setCurrentWine(DISPLAYWINES.get(i));
-                try {
-                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/wineMiniDisplay.fxml"));
-                    wineDisplays.add(loader.load());
-                } catch (IOException e) {
-                    e.printStackTrace();
+                if (displayWines.size() == 6) {
+                    for (int i = 0; i < 6; i++) {
+                        displayWines.addLast(displayWines.get(i));
+                    }
                 }
+                if (displayWines.size() == 7) {
+                    leftDisplay = 0;
+                }
+                if (displayWines.size() < MAXWINES) {
+                    MAXWINES = displayWines.size();
+                    rightDisplay = MAXWINES - 1;
+                } else {
+                    rightDisplay = 6;
+                }
+                loadWineDisplays();
             }
-            mainWine0.getChildren().add(wineDisplays.get(0));
-            mainWine1.getChildren().add(wineDisplays.get(1));
-            mainWine2.getChildren().add(wineDisplays.get(2));
-            mainWine3.getChildren().add(wineDisplays.get(3));
-            mainWine4.getChildren().add(wineDisplays.get(4));
-            mainWine5.getChildren().add(wineDisplays.get(5));
-            mainWine6.getChildren().add(wineDisplays.get(6));
+        }
+    }
+
+    /**
+     * Loads in the wine mini displays (wine tiles) for the category display.
+     */
+    private void loadWineDisplays() {
+        for (int i = 0; i < MAXWINES; i++) {
+            SearchWineService.getInstance().setCurrentWine(displayWines.get(i));
+            try {
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/wineMiniDisplay.fxml"));
+                wineDisplays.add(loader.load());
+            } catch (IOException e) {
+                LOG.error("Error in WineCategoryDisplayController.initialize: Could not load fxml content for wine ID {}.", displayWines.get(i).getWineId());
+            }
+        }
+        ArrayList<AnchorPane> mainWines = new ArrayList<>(List.of(mainWine0, mainWine1, mainWine2, mainWine3, mainWine4, mainWine5, mainWine6));
+        for (int i = 0; i < mainWines.size(); i++) {
+            mainWines.get(i).getChildren().add(wineDisplays.get(i));
         }
     }
 
@@ -151,13 +185,8 @@ public class WineCategoryDisplayController {
      */
     @FXML
     public void onRefresh() {
-        rightArrowButton.setOnMouseClicked(event -> {
-            transitionRight();
-        });
-
-        leftArrowButton.setOnMouseClicked(event -> {
-            transitionLeft();
-        });
+        rightArrowButton.setOnMouseClicked(event -> transitionRight());
+        leftArrowButton.setOnMouseClicked(event -> transitionLeft());
     }
 
     /**
@@ -178,25 +207,27 @@ public class WineCategoryDisplayController {
             wineDisplay.setDisable(true);
         }
 
-        TranslateTransition transition1 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(1)));
-        TranslateTransition transition2 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(2)));
-        TranslateTransition transition3 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(3)));
-        TranslateTransition transition4 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(4)));
-        TranslateTransition transition5 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(5)));
+        TranslateTransition transition1 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(1)));
+        TranslateTransition transition2 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(2)));
+        TranslateTransition transition3 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(3)));
+        TranslateTransition transition4 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(4)));
+        TranslateTransition transition5 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(5)));
         TranslateTransition transition6;
+
         if (posOrNeg == 1) {
-            transition6 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(0)));
+            transition6 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(0)));
         } else {
-            transition6 = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(6)));
-        }
-        List<TranslateTransition> wineTransitions = List.of(transition1, transition2, transition3, transition4, transition5, transition6);
-        for (int i = 0; i < wineTransitions.size(); i++) {
-            wineTransitions.get(i).setByX(posOrNeg * DISTANCEBETWEEN);
-            wineTransitions.get(i).setInterpolator(Interpolator.LINEAR);
-            wineTransitions.get(i).play();
+            transition6 = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(6)));
         }
 
-        wineTransitions.get(wineTransitions.size() - 1).setOnFinished(event -> { // Un-disables the wine tiles
+        List<TranslateTransition> wineTransitions = List.of(transition1, transition2, transition3, transition4, transition5, transition6);
+        for (TranslateTransition wineTransition : wineTransitions) {
+            wineTransition.setByX(posOrNeg * DISTANCEBETWEEN);
+            wineTransition.setInterpolator(Interpolator.LINEAR);
+            wineTransition.play();
+        }
+
+        wineTransitions.getLast().setOnFinished(event -> { // Un-disables the wine tiles
             for (Parent wineDisplay : wineDisplays) {
                 wineDisplay.setDisable(false);
             }
@@ -208,7 +239,7 @@ public class WineCategoryDisplayController {
      * @param movingFrame is the relative id of the anchor pane moving.
      */
     public void fadeIn(int movingFrame) {
-        FadeTransition fadeTransition = new FadeTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(movingFrame)));
+        FadeTransition fadeTransition = new FadeTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(movingFrame)));
         fadeTransition.setFromValue(0);
         fadeTransition.setToValue(1);
         fadeTransition.play();
@@ -220,7 +251,7 @@ public class WineCategoryDisplayController {
      * @param movingFrame is the relative id of the anchor pane moving.
      */
     public void fadeOut(int movingFrame) {
-        FadeTransition fadeTransitionOut = new FadeTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(movingFrame)));
+        FadeTransition fadeTransitionOut = new FadeTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(movingFrame)));
         fadeTransitionOut.setFromValue(1);
         fadeTransitionOut.setToValue(0);
         fadeTransitionOut.play();
@@ -234,7 +265,7 @@ public class WineCategoryDisplayController {
      * @param posOrNeg is the direction of the translation (right = positive)
      */
     public void teleportEnd(int movingFrame, int posOrNeg) {
-        TranslateTransition transitionReturn = new TranslateTransition(Duration.seconds(TRANSDURATION), wineViews.get(getId(movingFrame)));
+        TranslateTransition transitionReturn = new TranslateTransition(Duration.seconds(TRANSITIONDURATION), wineViews.get(getId(movingFrame)));
         transitionReturn.setByX(posOrNeg * DISTANCEBETWEEN * 6);
         transitionReturn.setInterpolator(Interpolator.DISCRETE);
         transitionReturn.play();
@@ -268,7 +299,7 @@ public class WineCategoryDisplayController {
 
     /**
      * Changes the content within the teleporting frame.
-     * Updates the firstwine index
+     * Updates the first wine's index
      * @param frame is the teleporting frame (0 or 5)
      */
     public void resetFirstLeft(int frame) {
@@ -325,41 +356,45 @@ public class WineCategoryDisplayController {
     @FXML
     public void seeMore()
     {
-        if (isWishlist) {
-            FXWrapper.getInstance().launchSubPage("wishlist");
-        } else if (isRecommenations) {
-            SearchWineService.getInstance().searchWinesByRecommend(120);
-            FXWrapper.getInstance().launchSubPage("searchWine");
-        } else {
-            SearchWineService.getInstance().searchWinesByTags(tags, SearchDAO.UNLIMITED);
-            FXWrapper.getInstance().launchSubPage("searchWine");
-        }
+        navigationController.executeWithLoadingScreen(() -> {
+            String subpage;
+            if (isWishlist) {
+                subpage = "wishlist";
+            } else if (isRecommendations) {
+                SearchWineService.getInstance().searchWinesByRecommend(User.getCurrentUser().getId(), 120);
+                subpage = "searchWine";
+            } else {
+                SearchWineService.getInstance().searchWinesByTags(tags, SearchDAO.UNLIMITED);
+                subpage = "searchWine";
+            }
+            Platform.runLater(() -> FXWrapper.getInstance().launchSubPage(subpage));
+        });
     }
 
     /**
      * Displays the wines in the category if there are 4 or fewer wines.
      */
     public void fiveOrLess() {
-        for (Wine displaywine : DISPLAYWINES) {
+        for (Wine displaywine : displayWines) {
             SearchWineService.getInstance().setCurrentWine(displaywine);
             try {
                 FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/wineMiniDisplay.fxml"));
                 wineDisplays.add(loader.load());
             } catch (IOException e) {
-                e.printStackTrace();
+                LOG.error("Error in WineCategoryDisplayController.fourOrLess: Could not load fxml content for wine ID {}.", displaywine.getWineId());
             }
         }
         mainWine1.getChildren().add(wineDisplays.get(0));
-        if (DISPLAYWINES.size() >= 2) {
+        if (displayWines.size() >= 2) {
             mainWine2.getChildren().add(wineDisplays.get(1));
         }
-        if (DISPLAYWINES.size() >= 3) {
+        if (displayWines.size() >= 3) {
             mainWine3.getChildren().add(wineDisplays.get(2));
         }
-        if (DISPLAYWINES.size() == 4) {
+        if (displayWines.size() >= 4) {
             mainWine4.getChildren().add(wineDisplays.get(3));
         }
-        if (DISPLAYWINES.size() == 5) {
+        if (displayWines.size() == 5) {
             mainWine5.getChildren().add(wineDisplays.get(4));
         }
         leftArrowButton.setDisable(true);
@@ -373,31 +408,29 @@ public class WineCategoryDisplayController {
      *
      * @param searchString A String that contains the tags to search by seperated by commas
      *                     If string is "wishlist" or "recommend", the corresponding search will be done instead
-     * @throws IOException if fxmlLoader cannot load the display
      * @return the parent of the new category
      */
-    public static Parent createCategory(String searchString) throws IOException {
+    public static Parent createCategory(String searchString) {
+        try {
+            if (searchString.equalsIgnoreCase("wishlist")) {
+                SearchWineService.getInstance().searchWinesByWishlist(User.getCurrentUser().getId());
+            } else if (searchString.equalsIgnoreCase("recommend")) {
+                SearchWineService.getInstance().searchWinesByRecommend(User.getCurrentUser().getId(), 10);
+            } else {
+                SearchWineService.getInstance().searchWinesByTags(searchString, 10);
+            }
 
-        if (searchString.equalsIgnoreCase("wishlist")) {
-            SearchWineService.getInstance().searchWinesByWishlist(User.getCurrentUser().getId());
-        } else if (searchString.equalsIgnoreCase("recommend")) {
-            SearchWineService.getInstance().searchWinesByRecommend(10);
-        } else {
-            SearchWineService.getInstance().searchWinesByTags(searchString, 10);
+            savedWineList = SearchWineService.getInstance().getWineList();
+            savedSearchString = searchString;
+            WineCategoryService.getInstance().setCurrentCategoryTitle(searchString);
+
+            FXMLLoader fxmlLoader = new FXMLLoader(WineCategoryDisplayController.class
+                    .getResource("/fxml/wineCategoryDisplay.fxml"));
+
+            return fxmlLoader.load();
+        } catch (IOException e) {
+            LOG.error("Error: Could not load fxml content for wine category, {}", e.getMessage());
+            return null;
         }
-
-        savedWineList = SearchWineService.getInstance().getWineList();
-        savedSearchString = searchString;
-
-
-        FXMLLoader fxmlLoader = new FXMLLoader(WineCategoryDisplayController.class
-                .getResource("/fxml/wineCategoryDisplay.fxml"));
-        Parent parent = fxmlLoader.load();
-        // Have to do this as it requires multiple loops to finish completely
-        // - need to use for "A Task Which Returns Partial Results", from the Task documentation
-        if (!searchString.equalsIgnoreCase("recommend")) {
-            WineCategoryService.getInstance().incrementCurrentCategory();
-        }
-        return parent;
     }
 }
